--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 * {
 	box-sizing: border-box;
+	font-family: "Press Start 2P";
+	color: #0f380f;
 }
 
 body {
@@ -14,12 +15,7 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	font-family: 'Lato';
 	margin: 0;
-}
-
-h1 {
-	letter-spacing: 3px;
 }
 
 .poke-container {
@@ -33,33 +29,37 @@ h1 {
 
 .pokemon {
 	background-color: #eee;
-	border-radius: 20px;
+	border-radius: 5px;
 	box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
 	margin: 10px;
 	padding: 20px;
-	text-align: center;
 }
 
 .pokemon .img-container {
 	background: #EFEFBB;
 	background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);
 	background: linear-gradient(to right, #D4D3DD, #EFEFBB);
-    border: 1px solid #000;
-	border-radius: 5%;
+    border: 4px solid #000;
+	border-radius: 5px;
 	width: 254px;
 	height: 186px;
 	display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column-reverse;
 }
 
 .pokemon .img-container img {
-	max-width: 90%;
+	width: 186px;
+	height: 186px;
+	align-self: center;
+	justify-self: center;
 }
 
 .pokemon .number {
-	background-color: rgba(0, 0, 0, 0.1);
-	border-radius: 10px;
+	position: absolute;
+	background-color: #9bbc0f;
+	border-top: 4px solid #000;
+	border-right: 4px solid #000;
+	border-radius: 5px;
 	font-size: 0.8em;
 	padding: 5px 10px;
 }
@@ -69,6 +69,79 @@ h1 {
 }
 
 .pokemon .name {
-	margin: 15px 0 7px;
+	background: #9bbc0f;
+	border: 4px solid #000;
+	border-radius: 5px;
+	width: 254px;
+	height: 40px;
 	letter-spacing: 1px;
+	padding: 5px;
+	padding-left: 15px;
+	overflow: hidden;
+	position: relative;
+}
+
+.pokemon .name h3 {
+	position: absolute;
+	letter-spacing: 1px;
+	line-height: 100%;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	-moz-transform: translateX(100%);
+	-webkit-transform: translateX(100%);
+	transform: translateX(100%);
+	-moz-animation: scroll-right 2s linear infinite;
+	-webkit-animation: scroll-right 2s linear infinite;
+	animation: scroll-right 6s linear infinite;
+}
+
+@-moz-keyframes scroll-right {
+	0% {
+		-moz-transform: translateX(-100%);
+	}
+	100% {
+		-moz-transform: translateX(100%);
+	}
+}
+
+@-webkit-keyframes scroll-right {
+	0% {
+		-webkit-transform: translateX(-100%);
+	}
+	100% {
+		-webkit-transform: translateX(100%);
+	}
+}
+
+@keyframes scroll-right {
+	0% {
+		-moz-transform: translateX(-100%);
+		-webkit-transform: translateX(-100%);
+		transform: translateX(-100%);
+	}
+	100% {
+		-moz-transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+		transform: translateX(100%);
+	}
+}
+
+.pokemon .types {
+	display: flex;
+	flex-direction: row;
+	width: 254px;
+	justify-content: space-between;
+}
+
+.pokemon .type {
+	background: #9bbc0f;
+	border: 4px solid #000;
+	border-radius: 5px;
+	width: 48%;
+	letter-spacing: 1px;
+	padding: 5px;
+	padding-left: 15px;
+	margin-top: 5px;
 }
