--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
 
 .pokemon {
 	background-color: #eee;
+	border: 4px solid #000;
 	border-radius: 5px;
-	box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
 	margin: 10px;
 	padding: 20px;
 }
